addons/ingress-controller/routes/jaeger-ui-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger-ui-route
  namespace: observability
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tracing.i-keda.com`)
      kind: Rule
      services:
        - name: dev-jaeger-query
          port: 16686
      middlewares:
        - name: jaeger-ui-auth
          namespace: observability
        - name: jaeger-ui-header
          namespace: observability
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jaeger-ui-auth
  namespace: observability
spec:
  basicAuth:
    secret: jaeger-ui-authsecret
    removeHeader: false
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jaeger-ui-header
  namespace: observability
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "dev-jaeger-query.observability.svc.cluster.local:16686"
